Part2/Exercise 2.02 Project v1.0/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: anonymous92/node-webserver:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: image-cache
          mountPath: /shared
      volumes:
      - name: image-cache
        emptyDir: {}
