Part2/Exercise 2.02 Project v1.0/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-service
            port:
              number: 80
      - path: /todo-backend
        pathType: Prefix
        backend:
          service:
            name: todo-backend
            port:
              number: 3000
